# MCP-Exploration

./: .env.example  .gitignore  AWS_DEPLOYMENT_EXECUTIVE_GUIDE.md  AWS_DEPLOYMENT_GUIDE.md  MCP_tools_example.ipynb  README.md  TECHNICAL_DOCUMENTATION.md  claude_desktop_config.json  gemini_client.py  mcp_client.py  mcp_server.py  pyproject.toml  requirements.txt
